--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -19,31 +19,44 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_marginLeft="3dp"
-              android:gravity="center_vertical"
-              android:layout_height="96dp">
+          xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
+          xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
+          android:orientation="vertical"
+          android:layout_width="match_parent"
+          android:layout_marginLeft="3dp"
+          android:gravity="center_vertical"
+          android:layout_height="96dp">
 
     <TextView
         android:id="@+id/carddemo_myapps_main_inner_title"
-        style="@style/carddemo_myapps_main_inner_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/carddemo_myapps_main_inner_secondaryTitle"
-        style="@style/carddemo_myapps_main_inner_secondarytitle"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <RatingBar
-        android:id="@+id/carddemo_myapps_main_inner_ratingBar"
-        style="@style/carddemo_myapps_main_inner_ratingbar"
-        android:numStars="5"
-        android:stepSize="1.0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/carddemo_myapps_main_inner_secondaryTitle"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="@string/placeholder_text"/>
 
+        <com.beardedhen.androidbootstrap.FontAwesomeText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fontawesometext:fa_icon="fa-comments"
+            android:layout_gravity="center_vertical"
+            android:textSize="20dp"/>
 
+        <TextView
+            android:id="@+id/comments_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="10"
+            android:textSize="16dp"/>
+    </LinearLayout>
 </LinearLayout>
