--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -24,13 +24,14 @@
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_marginLeft="3dp"
-          android:gravity="center_vertical"
-          android:layout_height="96dp">
+          android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/carddemo_myapps_main_inner_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        style="@style/carddemo_myapps_main_inner_title"
+        android:text="@string/placeholder"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,7 +43,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="@string/placeholder_text"/>
+            android:text="@string/placeholder"/>
 
         <com.beardedhen.androidbootstrap.FontAwesomeText
             android:layout_width="wrap_content"
@@ -52,6 +53,7 @@
             android:textSize="20dp"/>
 
         <TextView
+            style="@style/carddemo_myapps_main_inner_secondarytitle"
             android:id="@+id/comments_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
