--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -96,12 +96,12 @@
 
     <style name="carddemo_myapps_main_inner_secondarytitle">
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@android:color/darker_gray</item>
+        <item name="android:textColor">@color/timeline_item_text_color_gray</item>
     </style>
 
     <style name="carddemo_myapps_main_inner_title">
         <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@color/timeline_item_text_color_dark</item>
         <item name="android:layout_marginTop">2dp</item>
     </style>
 
