--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,10 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:choiceMode="singleChoice"
-          android:divider="@color/navigation_drawer_item_separator"
-          android:dividerHeight="1dp"
-          android:background="#1f1f1f"
-          tools:context="me.bruce.oschina.ui.NavigationDrawerFragment" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
+    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="Success"
+        android:textSize="18dp"
+        bootstrapbutton:bb_icon_left="fa-android"
+        bootstrapbutton:bb_type="success"/>
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="Success"
+        android:textSize="18dp"
+        bootstrapbutton:bb_icon_left="fa-android"
+        bootstrapbutton:bb_type="success"/>
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="Success"
+        android:textSize="18dp"
+        bootstrapbutton:bb_icon_left="fa-android"
+        bootstrapbutton:bb_type="success"/>
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="Success"
+        android:textSize="18dp"
+        bootstrapbutton:bb_icon_left="fa-android"
+        bootstrapbutton:bb_type="success"/>
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="Success"
+        android:textSize="18dp"
+        bootstrapbutton:bb_icon_left="fa-android"
+        bootstrapbutton:bb_type="success"/>
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="Success"
+        android:textSize="18dp"
+        bootstrapbutton:bb_icon_left="fa-android"
+        bootstrapbutton:bb_type="success"/>
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="Success"
+        android:textSize="18dp"
+        bootstrapbutton:bb_icon_left="fa-android"
+        bootstrapbutton:bb_type="success"/>
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="Success"
+        android:textSize="18dp"
+        bootstrapbutton:bb_icon_left="fa-android"
+        bootstrapbutton:bb_type="success"/>
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="Success"
+        android:textSize="18dp"
+        bootstrapbutton:bb_icon_left="fa-android"
+        bootstrapbutton:bb_type="success"/>
+</LinearLayout>
